# objectBasedCloudDetection

./: .gitignore  README.md
obcd/: pyproject.toml  requirements.txt
obcd/obcd/: __init__.py  classes.py  cli.py  utils.py
obcd/obcd/extract/: __init__.py  from_download.py  main.py
obcd/obcd/extract/extractors/: demdata.py
obcd/obcd/features/: __init__.py  from_download.py  main.py
obcd/obcd/features/extractors/: demdata.py  mapzen_wms.xml  metadata.py
obcd/obcd/predict/: __init__.py  main.py
obcd/obcd/train/: __init__.py  main.py
obcd/tests/: test_obcd.py
