[tool.poetry]
name = "obcd"
version = "0.1.0"
description = ""
authors = ["mtralka <mtralka@umd.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scikit-image = "^0.19.2"
numpy = "^1.22.2"
pandas = "^1.4.1"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
imbalanced-learn = "^0.9.0"
sklearn-pandas = "^2.2.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
obcd = 'obcd.cli:app'